bazzite-dx -> aurora-dx

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,7 +20,7 @@
     {
       "automerge": true,
       "matchUpdateTypes": ["digest"],
-      "matchDepNames": ["ghcr.io/ublue-os/bazzite-dx"],
+      "matchDepNames": ["ghcr.io/ublue-os/aurora-dx"],
     }
   ]
 }
